--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La hostia de las paginas de internet</title>
     <link rel="stylesheet" href="Style.css">
-    
+    <script src="index.js"></script>
 </head>
 
 <body>
