Ya se pueden subir los registros a la BD

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La hostia de las paginas de internet</title>
     <link rel="stylesheet" href="Style.css">
-    <script src="index.js"></script>
+    <script src="index.js" defer></script>
 </head>
 
 <body>
     <h1>Es la maldita hostia en las paginas de internet</h1>
+    <div class="Inputs">
+        <input type="text" id="ProductName" placeholder="Nombre del producto">
+        <input type="number" id="ProductPrice" placeholder="Precio del producto">
+       <button>Crear producto</button>
+    </div>
 </body>
 </html>
